--- a/packages/a/package.json
+++ b/packages/a/package.json
@@ -2,6 +2,6 @@
   "name": "a",
   "version": "1.0.1",
   "scripts": {
-    "prepublish": "rm -rf lib; sleep 5; mkdir lib; cp src/build.js lib"
+    "prepublish": "rm -rf lib; sleep 5; mkdir lib; cp src/build.js lib; echo done"
   }
 }
